--- a/public/assets/web/ASSETS_En/css/STYLEeN9.css
+++ b/public/assets/web/ASSETS_En/css/STYLEeN9.css
@@ -11700,6 +11700,26 @@ a:hover span {
     .addition-items {
       width: 100%;
 
+      #newest {
+        width: 100%;
+
+        .newestCollapse {
+          background: #fd9636;
+          border: none;
+          border-radius: 10px;
+          padding: clamp(8px, 0.78125vw, 15px)
+            clamp(12px, 1.0416666666666665vw, 20px);
+          font-size: clamp(12px, 0.78125vw, 15px);
+          font-weight: 700;
+          line-height: 18px;
+          text-align: center;
+          color: #ffffff;
+          margin: clamp(8px, 0.78125vw, 15px) auto;
+          display: flex;
+          align-items: center;
+        }
+      }
+
       .line {
         width: 70%;
         border-bottom: 1px solid #f1f1f2;
@@ -11990,14 +12010,14 @@ a:hover span {
 .checkoutButtons .left {
   border: 1px solid #d9d9d9;
   border-radius: 10px;
-  font-size: clamp( 12px, 0.78125vw, 15px);
+  font-size: clamp(12px, 0.78125vw, 15px);
   font-weight: 700;
   line-height: 18px;
   text-align: center;
-  padding: clamp( 8px, 0.78125vw, 15px) clamp( 12px, 1.0416666666666665vw, 20px);
+  padding: clamp(8px, 0.78125vw, 15px) clamp(12px, 1.0416666666666665vw, 20px);
   color: #949494;
 
-  span{
+  span {
     height: 25px;
     display: inline-block;
   }
@@ -13638,14 +13658,15 @@ body.dark {
       align-items: center;
       justify-content: space-between;
       border: 1px #d9d9d9 solid;
-      border-radius: 35px;
-      padding: 20px 15px;
+      border-radius: clamp(15px, 1.8229166666666667vw, 35px);
+      padding: clamp(10px, 1.0416666666666665vw, 20px)
+        clamp(8px, 0.78125vw, 15px);;
 
       .right {
         display: flex;
         align-items: center;
         justify-content: center;
-        gap: 20px;
+        gap: clamp(5px, 1.0416666666666665vw, 20px);
 
         .icon-container {
           height: 24px;
@@ -13746,7 +13767,7 @@ body.dark {
         }
 
         .change-location-btn {
-          padding: 10px;
+          padding: clamp(5px, 0.5208333333333333vw, 10px);
           background: #fd9636;
           border-radius: 6px;
           display: inline-flex;
@@ -13758,28 +13779,16 @@ body.dark {
             text-align: center;
             width: 100%;
             color: white;
-            font-size: 17px;
+            font-size: clamp(8px, 0.8854166666666666vw, 17px);
             font-family: Alexandria;
             font-weight: 500;
             line-height: 20px;
             text-wrap: nowrap;
           }
-
-          @media (max-width: 900px) {
-            .change-location-text {
-              font-size: 14px;
-            }
-          }
-
-          @media (max-width: 450px) {
-            .change-location-text {
-              font-size: 12px;
-            }
-          }
         }
 
         .default-badge {
-          padding: 3px 15px;
+          padding: 3px clamp(8px, 0.78125vw, 15px);
           background: rgba(14, 34, 77, 0.5);
           border-radius: 5px;
           display: inline-flex;
@@ -13789,7 +13798,7 @@ body.dark {
           .badge-text {
             text-align: center;
             color: white;
-            font-size: 12px;
+            font-size: clamp(8px, 0.625vw, 12px);
             font-family: Alexandria;
             font-weight: 600;
             line-height: 18px;
@@ -13797,27 +13806,23 @@ body.dark {
         }
       }
 
-      @media (max-width: 900px) {
-        .right {
-          gap: 10px;
-        }
-      }
+     
       .left {
         display: flex;
         align-items: center;
         justify-content: center;
-        gap: 20px;
+        gap: clamp( 5px, 1.0416666666666665vw, 20px);
 
         .delivery-details {
           display: flex;
           align-items: flex-start;
           justify-content: center;
           flex-direction: column;
-          gap: 10px;
+          gap: clamp( 5px, 0.5208333333333333vw, 10px);
 
           .delivery-title {
             color: black;
-            font-size: 20px;
+            font-size: clamp( 12px, 1.0416666666666665vw, 20px);
             font-family: Alexandria;
             font-weight: 700;
             line-height: 20px;
@@ -13825,40 +13830,18 @@ body.dark {
 
           .delivery-address {
             color: black;
-            font-size: 15px;
+            font-size: clamp( 10px, 0.78125vw, 15px);
             font-family: Alexandria;
             font-weight: 500;
             line-height: 20px;
-            white-space: break-spaces;
             overflow: hidden;
             text-overflow: ellipsis;
-            text-align: right;
             padding-left: 5px;
             display: -webkit-box;
             -webkit-line-clamp: 2;
             line-clamp: 2;
             -webkit-box-orient: vertical;
             box-orient: vertical;
-          }
-
-          @media (max-width: 900px) {
-            .delivery-title {
-              font-size: 15px;
-            }
-
-            .delivery-address {
-              font-size: 13px;
-            }
-          }
-
-          @media (max-width: 450px) {
-            .delivery-title {
-              font-size: 13px;
-            }
-
-            .delivery-address {
-              font-size: 10px;
-            }
           }
         }
 
@@ -13904,12 +13887,12 @@ body.dark {
     .add-address-text {
       border: none;
       outline: none;
-      padding: 15px 20px;
+      padding: clamp( 8px, 0.78125vw, 15px) clamp( 10px, 1.0416666666666665vw, 20px);
       background: #dde4f0;
       border-radius: 12px;
       text-align: center;
       color: black;
-      font-size: 19px;
+      font-size: clamp( 12px, 0.9895833333333333vw, 19px);
       font-family: Alexandria, sans-serif;
       font-weight: 600;
       line-height: 18px;
@@ -14073,16 +14056,6 @@ body.dark {
       }
     }
 
-    /* .checkbox-border {
-      width: 18px;
-      height: 18px;
-      position: absolute;
-      left: 0;
-      top: 0;
-      border-radius: 3px;
-      border: 1px #FD9636 solid;
-  } */
-
     .chckBtns {
       width: 80%;
       margin: 0 auto;
@@ -14116,58 +14089,6 @@ body.dark {
       .addres-item {
         border: 1px var(--dark-mode-white) solid;
 
-        .right {
-          .change-location-btn {
-            padding: 10px;
-            background: #fd9636;
-            border-radius: 6px;
-            display: inline-flex;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
-
-            .change-location-text {
-              text-align: center;
-              width: 100%;
-              color: white;
-              font-size: 17px;
-              font-family: Alexandria;
-              font-weight: 500;
-              line-height: 20px;
-              text-wrap: nowrap;
-            }
-
-            @media (max-width: 900px) {
-              .change-location-text {
-                font-size: 14px;
-              }
-            }
-
-            @media (max-width: 450px) {
-              .change-location-text {
-                font-size: 12px;
-              }
-            }
-          }
-
-          .default-badge {
-            padding: 3px 15px;
-            background: rgba(14, 34, 77, 0.5);
-            border-radius: 5px;
-            display: inline-flex;
-            justify-content: center;
-            align-items: center;
-
-            .badge-text {
-              text-align: center;
-              color: white;
-              font-size: 12px;
-              font-family: Alexandria;
-              font-weight: 600;
-              line-height: 18px;
-            }
-          }
-        }
         .left {
           .delivery-details {
             .delivery-title {
