--- a/public/assets/web/ASSets/css/home.css
+++ b/public/assets/web/ASSets/css/home.css
@@ -1156,7 +1156,7 @@
             button {
               width: 142px;
               height: 42px;
-              border-radius: 12px;
+              border-radius: clamp( 8px, 0.625vw, 12px);
               border: none;
               outline: none;
               background-color: #fd9636;
@@ -1175,7 +1175,7 @@
               width: 42px;
               height: 42px;
               border: 1px solid #fd9636;
-              border-radius: 12px;
+              border-radius: clamp( 8px, 0.625vw, 12px);
               display: flex;
               align-items: center;
               justify-content: center;
@@ -1271,6 +1271,10 @@
 
           .slide-container {
             .flash-pro-img {
+              .heartIconLink {
+                left: 8px;
+                top: 8px;
+              }
               a {
                 top: 5px;
                 left: 10px;
@@ -1301,12 +1305,13 @@
             .flsh-pro-buttons {
               margin: 10px 0 5px 0;
               button {
-                width: 106px;
+                width: 100px;
                 height: 28px;
                 font-family: Alexandria;
                 font-size: 6px;
                 font-weight: 600;
                 line-height: 7.31px;
+                gap: 5px;
 
                 svg {
                   width: 10px;
@@ -2065,6 +2070,21 @@
           background-color: #fd9636;
           color: #fff;
 
+          svg {
+            path {
+              fill: #fff !important;
+            }
+          }
+        }
+
+        a.favorited {
+          svg {
+            path {
+              fill: #fd9636 !important;
+            }
+          }
+        }
+        a.favorited:hover {
           svg {
             path {
               fill: #fff !important;
