--- a/public/assets/web/ASSets/css/product-details.css
+++ b/public/assets/web/ASSets/css/product-details.css
@@ -496,6 +496,24 @@
           width: 9.011627906%;
           border: 2px solid #fd9636;
           border-radius: 12px;
+          svg{
+            cursor: pointer;
+          }
+
+          a.favorited {
+            svg {
+              path {
+                fill: #fd9636 !important;
+              }
+            }
+          }
+          a.favorited:hover {
+            svg {
+              path {
+                fill: #fff !important;
+              }
+            }
+          }
         }
       }
 
