--- a/public/assets/web/ASSets_Ar/css/STYLEAR12.css
+++ b/public/assets/web/ASSets_Ar/css/STYLEAR12.css
@@ -15422,6 +15422,25 @@ body.dark {
             width: 9.011627906%;
             border: 2px solid #fd9636;
             border-radius: 12px;
+
+            svg{
+              cursor: pointer;
+            }
+  
+            a.favorited {
+              svg {
+                path {
+                  fill: #fd9636 !important;
+                }
+              }
+            }
+            a.favorited:hover {
+              svg {
+                path {
+                  fill: #fff !important;
+                }
+              }
+            }
           }
         }
 
