--- a/public/assets/web/ASSets_Ar/css/STYLEAR12.css
+++ b/public/assets/web/ASSets_Ar/css/STYLEAR12.css
@@ -13983,12 +13983,13 @@ body.dark {
 
 @media (max-width: 900px) {
   .profile-container {
+    width: 100%;
     .inputs-container {
       justify-content: center;
 
       .input-content {
         width: 100%;
-        max-width: 450px;
+        max-width: 100% !important;
       }
     }
 
