--- a/public/assets/web/ASSets/css/shop.css
+++ b/public/assets/web/ASSets/css/shop.css
@@ -369,8 +369,8 @@
             outline: none;
             background: transparent;
             padding: clamp(12px, 0.8333333333333334vw, 16px)
-            clamp( 10px, 0.7291666666666666vw, 14px);
-            gap: clamp( 10px, 0.7291666666666666vw, 14px);
+              clamp(10px, 0.7291666666666666vw, 14px);
+            gap: clamp(10px, 0.7291666666666666vw, 14px);
             border: 1px solid #f1f1f2;
             border-radius: 6px;
 
@@ -395,7 +395,7 @@
 
                 span {
                   font-family: Alexandria;
-                  font-size: clamp( 10px, 0.625vw, 12px);
+                  font-size: clamp(10px, 0.625vw, 12px);
                   font-weight: 700;
                   line-height: 18px;
                   color: #000;
@@ -701,7 +701,6 @@
           justify-content: start;
 
           .flash-pro-img {
-
             width: 100%;
             border-radius: 12px;
             overflow: hidden;
@@ -836,7 +835,7 @@
             button {
               width: clamp(125px, 7.395833333333333vw, 142px);
               height: clamp(28px, 2.1875vw, 42px);
-              border-radius: clamp( 8px, 0.625vw, 12px);
+              border-radius: clamp(8px, 0.625vw, 12px);
               border: none;
               outline: none;
               background-color: #fd9636;
@@ -887,7 +886,7 @@
             width: 100%;
             text-align: center;
             font-family: "Alexandria", system-ui;
-            font-size: clamp( 6px, 0.46875vw, 9px);
+            font-size: clamp(6px, 0.46875vw, 9px);
             font-weight: 700;
             line-height: clamp(5px, 0.9375vw, 18px);
           }
@@ -1051,7 +1050,8 @@
       right: 0;
       z-index: 9999999999;
       background: #fff;
-      min-height: 80vh;
+      min-height: 73vh;
+      max-height: 90%;
       width: 300px;
       padding: 18px 9px;
       border-radius: 12px;
@@ -1131,6 +1131,10 @@ body.dark {
   .shop-content-wrapper {
     .filters-container {
       .filters-title {
+        svg{
+          stroke: #fff;
+        }
+
         span {
           color: #fff;
         }
@@ -1157,7 +1161,7 @@ body.dark {
 
           .mid-price {
             h3 {
-              color: #191c1f;
+              color: #fff;
             }
 
             .price-range {
@@ -1186,7 +1190,6 @@ body.dark {
           }
 
           .all-prices {
-
             .priceItem {
               .priceCircle {
                 border: 2px solid #fff;
@@ -1204,7 +1207,6 @@ body.dark {
         border: 1px solid var(--dark-mode-white);
 
         .allcatigory-collapse {
-
           .collapseSearch {
             border: 1px solid #fd9636;
             background: var(--dark-mode-second);
@@ -1231,14 +1233,14 @@ body.dark {
                     color: #fff;
                   }
 
-                  svg{
+                  svg {
                     fill: none;
 
-                    rect{
+                    rect {
                       fill: none;
                     }
 
-                    path{
+                    path {
                       fill: none;
                       stroke: #fff;
                     }
@@ -1246,26 +1248,20 @@ body.dark {
                 }
               }
 
-              .plusSvg{
-                path{
+              .plusSvg {
+                path {
                   fill: #fff;
                 }
               }
 
-              .minuseSvg{
-                path{
+              .minuseSvg {
+                path {
                   fill: var(--main);
                 }
               }
             }
 
-            
-           
-           
-
             .catigoryItem-collapse {
-           
-
               div {
                 input {
                   background: #fff;
@@ -1325,19 +1321,21 @@ body.dark {
       /* flash sales */
       .shop-products {
         .proMobHead {
-         
-
           h2 {
             color: #fff;
 
-            svg{
-              path{
+            svg {
+              path {
                 stroke: #fff;
               }
             }
           }
 
           .filters-title {
+            svg{
+              stroke: #fff;
+            }
+            
             span {
               color: #fff;
             }
@@ -1392,6 +1390,14 @@ body.dark {
             }
           }
         }
+      }
+    }
+  }
+
+  @media (max-width: 1200px) {
+    .shop-content-wrapper {
+      .filters-container.showInMobile {
+        background: var(--dark-mode-second);
       }
     }
   }
