--- a/public/assets/web/ASSets/css/footer.css
+++ b/public/assets/web/ASSets/css/footer.css
@@ -361,7 +361,7 @@
                 }
 
                 .footer-logo-img{
-                    img{
+                    svg{
                         max-width: 71px;
                     }
                 }
