--- a/public/assets/web/ASSets/css/cart.css
+++ b/public/assets/web/ASSets/css/cart.css
@@ -1,3 +1,578 @@
+
+/* ///////////////////////////// */
+
+
+/* cart items */
+
+.cartItems {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  direction: ltr;
+  margin: 100px 0;
+  border: 1px solid #f1f1f2;
+  border-radius: 12px;
+  box-shadow: 0px 3px 4px 0px #00000008;
+  padding: clamp(10px, 0.78125vw, 15px);
+}
+
+.cartItems .items {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  flex-direction: column;
+  gap: 1em;
+}
+
+.cartItems .items .item-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  flex-direction: column;
+  border: 1px solid #f1f1f2;
+  border-radius: 8px;
+  box-shadow: 0px 3px 4px 0px #bcbcbc1a;
+}
+
+.cartItems .items .item-container .item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding: 2px;
+  border-bottom: 1px solid #f1f1f2;
+}
+
+.cartItems .items .item-container .item .leftButtons {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 2em;
+  padding: 0 1em;
+}
+
+.cartItems .items .item-container .item .leftButtons .upBTNs {
+  display: flex;
+  gap: 1em;
+  padding: 5px;
+}
+
+.cartItems .items .item-container .item .leftButtons .upBTNs .fa-trash-alt {
+  color: #ff1212;
+  font-size: 18px;
+}
+
+.cartItems .items .item-container .item .leftButtons .upBTNs .fa-heart {
+  color: #9098b1;
+  font-size: 18px;
+}
+
+.cartItems .items .item-container .item .leftButtons .input-quantity {
+  border: 1px solid #ebf0ff;
+  box-shadow: 0px 1px 2px 0px #00000040;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.cartItems
+  .items
+  .item-container
+  .item
+  .leftButtons
+  .input-quantity
+  .plus-cart {
+  color: #fd9636;
+  padding: 5px;
+  width: 30px;
+  text-align: center;
+}
+
+.cartItems .items .item-container .item .leftButtons .input-quantity input {
+  color: #fd9636;
+  background-color: #ebf0ff;
+  padding: 5px;
+  width: 30px;
+  text-align: center;
+  border: none;
+  outline: none;
+  background-color: none;
+}
+
+.cartItems
+  .items
+  .item-container
+  .item
+  .leftButtons
+  .input-quantity
+  .minus-cart {
+  color: #9098b1;
+  padding: 5px;
+  width: 30px;
+  text-align: center;
+}
+
+.cartItems .items .item-container .item .itemInfo {
+  display: flex;
+  gap: 1em;
+}
+
+.cartItems .items .item-container .item .itemInfo img {
+  width: 100px;
+  padding: 3px;
+  border-radius: 10px;
+  min-width: 170px !important;
+}
+
+@media (max-width: 500px) {
+  .cartItems .items .item-container .item .itemInfo img {
+    width: 94px;
+    height: 94px;
+    min-width: 94px !important;
+  }
+}
+
+.cartItems .items .item-container .item .itemInfo .info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.cartItems .items .item-container .item .itemInfo .info h4 {
+  color: #000;
+  font-size: 1rem !important;
+  text-align: right;
+}
+
+.cartItems .items .item-container .item .itemInfo .info .cat {
+  color: #7f7f7f;
+  font-size: 10px;
+}
+
+.cartItems .items .item-container .item .itemInfo .info .price {
+  color: #fd9636;
+  font-size: 15px;
+  margin-top: 20px;
+  font-weight: bold;
+}
+
+.cartItems {
+  .additions {
+    display: flex;
+    align-items: start;
+    justify-content: start;
+    flex-direction: column;
+    gap: clamp(5px, 0.5208333333333333vw, 10px);
+    width: 100%;
+
+    .additions-head {
+      display: flex;
+      align-items: center;
+      justify-content: end;
+      width: 100%;
+      margin-top: clamp(5px, 0.5208333333333333vw, 10px);
+      padding-inline-end: clamp(10px, 0.7291666666666666vw, 14px);
+
+      span {
+        font-family: Alexandria;
+        font-size: clamp(12px, 0.8333333333333334vw, 16px);
+        font-weight: 600;
+        line-height: 24px;
+        letter-spacing: 0.005em;
+        color: #000;
+      }
+
+      span:nth-child(3) {
+        width: 57.8215%;
+        text-align: end;
+      }
+      span:nth-child(2) {
+        width: 18.7717%;
+        text-align: end;
+      }
+      span:nth-child(1) {
+        width: 11.1239%;
+        text-align: end;
+      }
+    }
+
+    .addition-items {
+      width: 100%;
+
+      #newest {
+        width: 100%;
+
+        .newestCollapse {
+          background: #fd9636;
+          border: none;
+          border-radius: 10px;
+          padding: clamp(8px, 0.78125vw, 15px)
+            clamp(12px, 1.0416666666666665vw, 20px);
+          font-size: clamp(12px, 0.78125vw, 15px);
+          font-weight: 700;
+          line-height: 18px;
+          text-align: center;
+          color: #ffffff;
+          margin: clamp(8px, 0.78125vw, 15px) auto;
+          display: flex;
+          align-items: center;
+        }
+      }
+
+      .line {
+        width: 70%;
+        border-bottom: 1px solid #f1f1f2;
+        margin: 0 auto;
+      }
+
+      .addition-item {
+        display: flex;
+        align-items: center;
+        justify-content: start;
+        width: 100%;
+        padding: clamp(5px, 0.5208333333333333vw, 10px)
+          clamp(10px, 0.7291666666666666vw, 14px);
+
+        .addition-info {
+          display: flex;
+          align-items: center;
+          justify-content: end;
+          width: 100%;
+
+          .addition-buttons {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: clamp(0px, 1.0416666666666665vw, 20px);
+
+            button {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              border: none;
+              outline: none;
+
+              svg {
+                width: clamp(15px, 1.7708333333333333vw, 34px);
+                height: clamp(15px, 1.7708333333333333vw, 34px);
+              }
+            }
+          }
+
+          .addition-count {
+            width: 11.1239%;
+            padding-inline-end: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: end;
+
+            .addition-count-text {
+              font-family: Alexandria;
+              font-size: clamp(12px, 0.8333333333333334vw, 16px);
+              font-weight: 700;
+              line-height: 24px;
+              text-align: end;
+              color: #425a8b;
+            }
+          }
+
+          .addition-price {
+            display: flex;
+            align-items: end;
+            justify-content: start;
+            flex-direction: column;
+            width: 18.7717%;
+
+            .newPrice {
+              font-family: Alexandria;
+              font-size: clamp(12px, 0.8333333333333334vw, 16px);
+              font-weight: 700;
+              line-height: 24px;
+              text-align: right;
+              color: #425a8b;
+            }
+
+            .old-price {
+              font-family: Alexandria;
+              font-size: clamp(10px, 0.7291666666666666vw, 14px);
+              font-weight: 400;
+              line-height: 24px;
+              text-align: right;
+              color: #8c9ec5;
+              text-decoration: line-through;
+            }
+          }
+
+          .addition-title {
+            width: calc(57.8215% - clamp(77px, 5.052083333333333vw, 97px));
+            display: flex;
+            align-items: center;
+            justify-content: end;
+
+            .addition-title-text {
+              font-family: Alexandria;
+              font-size: clamp(10px, 0.7291666666666666vw, 14px);
+              font-weight: 400;
+              line-height: 24px;
+              letter-spacing: 0.20000000298023224px;
+              padding-inline-end: clamp(10px, 1.0416666666666665vw, 20px);
+              color: #000;
+              text-align: end;
+            }
+          }
+
+          .addition-img {
+            width: clamp(77px, 5.052083333333333vw, 97px);
+            img {
+              width: 100%;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .cartItems .items .item-container .item .itemInfo .info .price {
+    font-size: 14px;
+    margin-top: 14px;
+  }
+}
+
+
+.checkout {
+  display: flex;
+  flex-direction: column;
+  width: 43%;
+  border: 1px solid #f1f1f2;
+  border-radius: 8px;
+  box-shadow: 0px 3px 4px 0px #00000008;
+  background-color: #8c9ec51a;
+  padding: clamp(15px, 1.40625vw, 27px);
+}
+
+.checkout .save-on {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.checkout .save-on h4 {
+  font-family: Alexandria;
+  font-size: clamp(16px, 1.1458333333333333vw, 22px);
+  font-weight: 400;
+  line-height: 32px;
+  color: #000;
+  width: 100%;
+  text-align: end;
+  border-inline-end: 1px solid #fd9636;
+  padding-inline-end: clamp(10px, 0.78125vw, 15px);
+}
+
+.checkout .save-on .save-on-input {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  border: 1px solid #d9d9d9;
+  border-radius: 8px;
+  padding: 10px;
+  margin-top: clamp(10px, 1.0416666666666665vw, 20px);
+}
+
+.checkout .save-on .save-on-input .input-section {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 3px;
+}
+
+.checkout .save-on .save-on-input .input-section img {
+  width: 20px;
+}
+
+.checkout .save-on .save-on-input .input-section input {
+  border: none;
+  outline: none;
+  color: #000;
+  background: transparent;
+}
+
+.checkout .save-on .save-on-input .input-section input::placeholder {
+  color: #d9d9d9;
+}
+
+.checkout .save-on .save-on-input button {
+  border: none;
+  outline: none;
+  background: none;
+  color: #fd9636;
+}
+
+.checkout label {
+  font-family: Alexandria;
+  font-size: clamp(16px, 1.1458333333333333vw, 22px);
+  font-weight: 400;
+  line-height: 32px;
+  color: #000;
+  width: 100%;
+  text-align: end;
+  border-inline-end: 1px solid #fd9636;
+  padding-inline-end: clamp(15px, 0.78125vw, 15px);
+}
+
+.checkout .checkoutContent {
+  border: 1px solid #d9d9d9;
+  border-radius: 10px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+}
+
+.checkout .checkoutContent .checkoutItem {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px 10px;
+  width: 100%;
+}
+
+.checkout .checkoutContent .checkoutItem span:nth-child(1) {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 32px;
+  color: #000;
+}
+
+.checkout .checkoutContent .checkoutItem:nth-child(1) span:nth-child(2) {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 33.73px;
+  color: #4b4b4b;
+}
+
+.checkout .checkoutContent .checkoutItem .taxis {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 32px;
+  color: #4b4b4b;
+}
+
+.checkout .checkoutContent .line {
+  border-top: 1px solid #d9d9d9;
+  width: 99%;
+  margin: 0 auto;
+}
+
+.checkout .checkoutContent .total {
+  display: block;
+  flex-direction: column;
+  width: 100%;
+  padding: 5px 10px;
+}
+
+.checkout .checkoutContent .total div:nth-child(1) {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.checkout .checkoutContent .total div:nth-child(1) span {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 32px;
+  color: #fd9636;
+}
+
+.checkout .checkoutContent .total div:nth-child(2) {
+  width: 100%;
+  text-align: center;
+  color: #ff1212;
+  padding: 5px 0;
+}
+
+.checkoutButtons {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px 0;
+  margin-top: 30px;
+}
+
+.checkoutButtons .left {
+  border: 1px solid #d9d9d9;
+  border-radius: 10px;
+  font-size: clamp(12px, 0.78125vw, 15px);
+  font-weight: 700;
+  line-height: 18px;
+  text-align: center;
+  padding: clamp(8px, 0.78125vw, 15px) clamp(12px, 1.0416666666666665vw, 20px);
+  color: #949494;
+
+  span {
+    height: 25px;
+    display: inline-block;
+  }
+}
+
+.checkoutButtons button {
+  background: #fd9636;
+  border: none;
+  border-radius: 10px;
+  padding: clamp(8px, 0.78125vw, 15px) clamp(12px, 1.0416666666666665vw, 20px);
+  font-size: clamp(12px, 0.78125vw, 15px);
+  font-weight: 700;
+  line-height: 18px;
+  text-align: center;
+  color: #ffffff;
+}
+
+.checkoutButtons .goToShop {
+  background: none;
+  border: 1px solid #d9d9d9;
+  color: #949494;
+  gap: 10px;
+
+  svg {
+    height: 25px;
+  }
+}
+
+@media (max-width: 992px) {
+  .cartItems {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+  }
+
+  .checkout,
+  .items {
+    width: 90% !important;
+  }
+}
+
+@media (max-width: 500px) {
+  .checkout,
+  .items {
+    width: 100% !important;
+  }
+
+  .cartItems .items .item-container .item .itemInfo .info h4 {
+    font-size: 12px !important;
+    line-height: 22.49px;
+  }
+}
+
+
 /* //////////////////// */
 /* dark mode */
 body.dark {
