--- a/public/assets/web/ASSets_Ar/css/STYLEAR12.css
+++ b/public/assets/web/ASSets_Ar/css/STYLEAR12.css
@@ -11841,7 +11841,7 @@ a:hover span {
 }
 
 /* cart items */
-
+/* 
 .cartItems {
   display: flex;
   align-items: flex-start;
@@ -12179,10 +12179,10 @@ a:hover span {
     font-size: 14px;
     margin-top: 14px;
   }
-}
+} */
 
 /* checkout */
-
+/* 
 .checkout {
   display: flex;
   flex-direction: column;
@@ -12409,7 +12409,7 @@ a:hover span {
     font-size: 12px !important;
     line-height: 22.49px;
   }
-}
+} */
 
 /*************** order page  ***********/
 .changeLocation {
