--- a/public/assets/web/ASSets/css/header.css
+++ b/public/assets/web/ASSets/css/header.css
@@ -205,6 +205,7 @@
   .container {
     .main-header {
       .burger-icon {
+        z-index: 10;
         div {
           width: 34px;
           height: 34px;
